--- a/HangoverPartII/HangoverPartII/HangoverPartII.csproj
+++ b/HangoverPartII/HangoverPartII/HangoverPartII.csproj
@@ -195,6 +195,26 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\0.jpg" />
+    <Content Include="Images\2_1405007169_mojito.png" />
+    <Content Include="Images\4c8599f1-d22b-4a16-a95b-ec08e1a583a4.jpg" />
+    <Content Include="Images\5d1fc232-314a-41ba-a91f-dcf8d39519fa.jpg" />
+    <Content Include="Images\b1b1bf87-c168-41ce-96f3-18b9c1d50e75.jpg" />
+    <Content Include="Images\background.jpg" />
+    <Content Include="Images\BACKGROUNDHome.jpg" />
+    <Content Include="Images\Bulleit-Rye-Mint-Julep.png" />
+    <Content Include="Images\cocktaiList.png" />
+    <Content Include="Images\cocktail_knockout-1.png" />
+    <Content Include="Images\cocktail_vesper-1.png" />
+    <Content Include="Images\cosmopolitan.png" />
+    <Content Include="Images\da7424ef-d053-41c3-87a2-f50ca98d149e.jpg" />
+    <Content Include="Images\ee43c5b0-2d48-4670-b3b1-bfb1e71add15.jpg" />
+    <Content Include="Images\Logo.jpg" />
+    <Content Include="Images\logoo.jpg" />
+    <Content Include="Images\Mexican-Mint-Julep.jpg" />
+    <Content Include="Images\mint-julep.png" />
+    <Content Include="Images\muscat-bleu-ec.png" />
+    <Content Include="Images\PINA_COLADA.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
@@ -254,7 +274,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Images\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
